--- a/academy-third-party/academy-oss/pom.xml
+++ b/academy-third-party/academy-oss/pom.xml
@@ -3,18 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>th-academy</artifactId>
+        <artifactId>academy-third-party</artifactId>
         <groupId>com.th.academy</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <modules>
-        <module>academy-oss</module>
-        <module>academy-vod</module>
-        <module>academy-cms</module>
-    </modules>
     <modelVersion>4.0.0</modelVersion>
-    <packaging>pom</packaging>
-    <artifactId>academy-third-party</artifactId>
+
+    <artifactId>academy-oss</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
