--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,6 @@
         <module>academy-third-party</module>
         <module>academy-acl</module>
         <module>academy-edu</module>
-        <module>academy-cms</module>
         <module>academy-ucenter</module>
         <module>academy-statistics</module>
         <module>academy-order</module>
@@ -31,7 +30,7 @@
     <properties>
         <java.version>1.8</java.version>
         <mybatis-plus.version>3.5.2</mybatis-plus.version>
-        <swagger.version>3.0.0</swagger.version>
+        <swagger.version>2.7.0</swagger.version>
         <jodatime.version>2.10.10</jodatime.version>
         <poi.version>4.1.2</poi.version>
         <commons-fileupload.version>1.4</commons-fileupload.version>
@@ -49,7 +48,6 @@
         <canal.client.version>1.1.0</canal.client.version>
         <cloud-alibaba.version>2021.0.1.0</cloud-alibaba.version>
         <cloud.version>2021.0.1</cloud.version>
-        <commons-pool2.version>2.6.0</commons-pool2.version>
     </properties>
 
     <dependencyManagement>
@@ -79,7 +77,13 @@
             <!--swagger-->
             <dependency>
                 <groupId>io.springfox</groupId>
-                <artifactId>springfox-boot-starter</artifactId>
+                <artifactId>springfox-swagger2</artifactId>
+                <version>${swagger.version}</version>
+            </dependency>
+            <!--swagger ui-->
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger-ui</artifactId>
                 <version>${swagger.version}</version>
             </dependency>
 
